[package]
name = "ekg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
nalgebra = "0.33.0"
raylib = { version = "5.0.2", features = [] }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.209", features = ["derive"] }


[target.'cfg(target_os = "linux")'.dependencies]
raylib = { version = "5.0.2", features = ["opengl_21"] }
