[package]
name = "ekg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
macroquad = "0.4.13"
nalgebra = "0.33.0"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.209", features = ["derive"] }

[profile.release]
strip = true
lto = true